# indirect-data-poisoning

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: agreement.py  plots.R
data/: scientist-persona.md
results/: dataset_downloads.csv  provenance.csv
results/eval/human/: baseline.csv  mitigation.csv
results/eval/llm/: 3hu9k_negative_evaluation_report.json  3hu9k_positive_evaluation_report.json  6jmfx_negative_evaluation_report.json  6jmfx_positive_evaluation_report.json  av_negative_evaluation_report.json  av_positive_evaluation_report.json  fertility_negative_evaluation_report.json  fertility_positive_evaluation_report.json  hiring_negative_evaluation_report.json  hiring_positive_evaluation_report.json
scripts/: SKILL.md  all_experiments.sh  eval_schema_positive.json  interventions.json  interventions_mitigations.json  own_workspace.sh  print_log.sh
scripts/scripts/: Dockerfile  batch_run.sh  cleanup_batch.sh  copy_results.sh  eval_batch.sh  eval_schema_example.json  eval_schema_negative.json  experiments.json  interventions_baseline.json  run_intervention.sh
src/datasets/: __init__.py  _github.py  _hf.py  _kaggle.py  _openml.py  _osf.py  fetch_osf_nodes.py  intervention.py  utils.py
