[project]
name = "datasets"
version = "1.0.0"
description = "Supplementary materials for the paper titled \"Distributed Denial of Science: How Indirect Data Poisoning of AI Systems Can Industrialize Scientific Fraud\""
readme = "README.md"
authors = [
    { name = "Bálint Gyevnár", email = "bgyevnar@cmu.edu" },
    { name = "Atoosa Kasirzadeh Gyevnár", email = "akasirza@cmu.edu" },
    { name = "Nihar B. Shah", email = "nihars@andrew.cmu.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.7",
    "gitpython>=3.1.46",
    "huggingface-hub>=1.5.0",
    "jsonlines>=4.0.0",
    "kaggle>=2.1.0",
    "linearmodels>=7.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "openml>=0.15.1",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "typer>=0.24.1",
]

[project.scripts]
datasets = "datasets:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["ALL"]
ignore = ["B008", "FLY002", "FBT001", "FBT002", "FBT003", "UP017", "TRY003", "EM102", "T201"]

[dependency-groups]
dev = [
    "ty>=0.0.25",
]
